syntax = "proto3";

package chatroom;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/midknight24/term-chat/protos";

message LoginRequest {
    string username = 1;
}

message ChatToken {
    string token = 1;
}

message Login {
    string username = 1;
}

message Logout {
    string username = 1;
}

message ChatMessage {
    string content = 1;
    string username = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message StreamMessage {
    google.protobuf.Timestamp timestamp = 1;
    
    oneof message {
        Login client_login = 2;
        ChatMessage client_message = 3;
        Logout client_logout = 4;
    }
}

service ChatRoom {
    rpc JoinChat (LoginRequest) returns (ChatToken) {}
    rpc Stream (stream StreamMessage) returns (stream StreamMessage) {}
}

